Closed Bug 1717245 Opened 4 years ago Closed 4 years ago

Printing buttons with high-contrast-dark on windows but without printing backgrounds causes black-on-black text

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox91 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

Str (on windows, with a dark high-contrast theme):

  • Go to data:text/html,<button>ABC</button>.
  • Print, make sure that "print backgrounds" is unchecked.

Expected:

  • Readable text.

Actual: black on black, even with the patch for bug 1715783.

(Like for printing with backgrounds disabled).

Otherwise layout darkens our foreground colors etc, and that causes contrast to
be poor.

Since the point of not painting backgrounds is saving ink, using the
regular colors seems fine.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fcca441f1fc8 Don't use system colors in the non-native theme if we're not painting backgrounds. r=mstange
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: